--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,7 @@
 @import '~bootstrap/scss/bootstrap.scss';
-@import './partials/header.scss'
+@import './partials/header.scss';
+
+label{
+    color: white;
+}
 
