add  request on header links to see what page we are using

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10868,6 +10868,10 @@ header nav ul li a {
   color: white;
   text-decoration: none;
 }
+header .active {
+  color: blue;
+  font-weight: bold;
+}
 
 label {
   color: white;
