--- a/resources/sass/partials/header.scss
+++ b/resources/sass/partials/header.scss
@@ -13,5 +13,10 @@ header{
             color: white;
             text-decoration: none;
         }
+
+    }
+    .active{
+        color: blue;  
+        font-weight: bold; 
     }
 }
